<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.QueryActivity">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:gravity="center|left"
                android:layout_gravity="center|start"
                android:layoutDirection="rtl"
                android:id="@+id/toolbar_lay"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/query"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center|start"
                    android:gravity="center|start"/>
        </LinearLayout>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_window"
                android:textSize="30sp"
                android:id="@+id/query_subject"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_lay"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                android:layout_gravity="center|start"
                android:gravity="center|start"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/query_subject"
                android:padding="@dimen/launch_btn_margin"
                android:layout_marginTop="30dp"
                android:layout_marginStart="@dimen/launch_btn_margin"
                android:layout_marginEnd="@dimen/launch_btn_margin"
                app:counterEnabled="true"
                app:counterMaxLength="130">

            <EditText
                    android:id="@+id/edt_teacher_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/launch_btn_margin"
                    android:layout_marginEnd="@dimen/launch_btn_margin"
                    android:hint="@string/enter_your_query"
                    android:maxLength="130"
                    android:padding="@dimen/launch_btn_margin"
                    android:inputType="textPassword"
                    android:textColor="@color/input_text_color"
                    android:textSize="19sp"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/launch_btn_margin"
                android:layout_marginStart="@dimen/launch_btn_margin"
                android:layout_marginTop="40dp"
                android:background="@drawable/launch_btn_shape"
                android:text="@string/submit"
                android:padding="@dimen/launch_btn_margin"
                android:id="@+id/btn_teacher_welcome"
                android:textColor="@color/colorAccent"
                android:foreground="?attr/selectableItemBackground"
                android:textSize="@dimen/welcome_text_size"
                app:layout_constraintTop_toBottomOf="@+id/text_input_password"
                android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
