<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable name="handler" type="sanaebadi.info.teacherhandler.activity.GeneratePasswordActivity.MyHandlers"/>
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            tools:context=".activity.StudentInfoActivity">


        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:fitsSystemWindows="true"
                android:scrollbarSize="1dp"
                android:scrollbarThumbVertical="@android:color/white">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
            >


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/colorPrimary"
                        android:gravity="center_vertical"
                        android:id="@+id/toolbar_lay"
                        android:layoutDirection="rtl"
                        android:orientation="horizontal">


                    <!--Logic App info Button-->
                    <ImageView
                            android:id="@+id/img_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:padding="5dp"
                            android:onClick="@{handler::onBackClick}"
                            app:srcCompat="@drawable/arrow_right"
                            tools:ignore="ContentDescription,VectorDrawableCompat"/>


                    <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"/>

                    <!--Title page-->
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/generate_password_title"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="10dp"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center|start"
                            android:gravity="center|start"/>

                </LinearLayout>


                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/generate_password"
                          android:textSize="20sp"
                          android:id="@+id/txt_title"
                          android:gravity="center"
                          android:textColor="@color/colorPrimaryDark"
                          android:layout_centerHorizontal="true"
                          android:layout_marginTop="20dp"
                          android:textStyle="bold"
                          android:layout_below="@+id/toolbar_lay"/>

                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:padding="@dimen/launch_btn_padding"
                          android:layout_marginEnd="@dimen/launch_btn_margin"
                          android:layout_marginStart="@dimen/launch_btn_margin"
                          app:passwordToggleDrawable="@drawable/show_password_selector"
                          android:layout_marginTop="30dp"
                          android:maxLength="10"
                          android:id="@+id/edt_generate_password"
                          android:textColor="@color/input_text_color"
                          android:textSize="19sp"
                          android:hint="@string/enter_password_key"
                          android:layout_below="@+id/txt_title"/>

                <Button
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom|end"
                        android:id="@+id/btn_generate_password"
                        android:textColor="@color/colorAccent"
                        android:foreground="?attr/selectableItemBackground"
                        android:textSize="@dimen/welcome_text_size"
                        android:layout_below="@+id/edt_generate_password"
                        android:text="@string/send_password"
                        android:layout_marginTop="25dp"
                        android:enabled="false"
                        android:onClick="@{handler::onSendPassword}"
                        android:layout_marginBottom="@dimen/launch_btn_margin"
                        android:layout_marginEnd="@dimen/launch_btn_margin"
                        android:layout_marginStart="@dimen/launch_btn_margin"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
