<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:ignore="MissingDefaultResource">

    <data>
        <variable name="handler" type="sanaebadi.info.teacherhandler.activity.StudentRegisterActivity.MyHandlers"/>

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:id="@+id/coordinator"
            android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:fitsSystemWindows="true"
                android:scrollbarSize="1dp"
                android:scrollbarThumbVertical="@android:color/white">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >



                <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/img_student_profile"
                        android:layout_width="@dimen/profile_size"
                        android:gravity="center"
                        android:layout_marginTop="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_height="@dimen/profile_size"
                        android:src="@mipmap/student"
                        android:scaleType="centerCrop"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@android:color/white"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/launch_btn_margin"
                        android:layout_marginEnd="@dimen/launch_btn_margin"
                        android:layout_below="@+id/img_student_profile"
                        android:padding="@dimen/launch_btn_margin"
                        android:layout_marginTop="20dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="15">

                    <EditText
                            android:id="@+id/edt_stu_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/launch_btn_margin"
                            android:layout_marginEnd="@dimen/launch_btn_margin"
                            android:hint="@string/enter_your_first_name"
                            android:maxLength="15"
                            android:padding="@dimen/launch_btn_margin"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/input_text_color"
                            android:textSize="19sp"/>


                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/launch_btn_margin"
                        android:layout_marginEnd="@dimen/launch_btn_margin"
                        android:layout_below="@+id/text_input_first_name"
                        android:padding="@dimen/launch_btn_margin"
                        android:layout_marginTop="20dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="15">

                    <EditText
                            android:id="@+id/edt_stu_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/launch_btn_margin"
                            android:layout_marginEnd="@dimen/launch_btn_margin"
                            android:hint="@string/last_name"
                            android:maxLength="15"
                            android:padding="@dimen/launch_btn_margin"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/input_text_color"
                            android:textSize="19sp"/>


                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/launch_btn_margin"
                        android:layout_marginEnd="@dimen/launch_btn_margin"
                        android:layout_below="@+id/text_input_last_name"
                        android:padding="@dimen/launch_btn_margin"
                        android:layout_marginTop="20dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="30">

                    <EditText
                            android:id="@+id/edt_student_email_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/launch_btn_margin"
                            android:layout_marginEnd="@dimen/launch_btn_margin"
                            android:hint="@string/student_email"
                            android:maxLength="30"
                            android:padding="@dimen/launch_btn_margin"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/input_text_color"
                            android:textSize="19sp"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_input_email"
                        android:padding="@dimen/launch_btn_margin"
                        android:layout_marginTop="20dp"
                        app:passwordToggleDrawable="@drawable/show_password_selector"
                        app:passwordToggleEnabled="true"
                        android:layout_marginStart="@dimen/launch_btn_margin"
                        android:layout_marginEnd="@dimen/launch_btn_margin"
                        app:counterEnabled="true"
                        app:counterMaxLength="10">

                    <EditText
                            android:id="@+id/edt_student_password_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/launch_btn_margin"
                            android:layout_marginEnd="@dimen/launch_btn_margin"
                            android:hint="@string/student_password"
                            android:maxLength="10"
                            android:padding="@dimen/launch_btn_margin"
                            android:inputType="textPassword"
                            android:textColor="@color/input_text_color"
                            android:textSize="19sp"/>


                </com.google.android.material.textfield.TextInputLayout>

                <Button android:layout_width="match_parent"
                        android:layout_marginEnd="@dimen/launch_btn_margin"
                        android:layout_marginStart="@dimen/launch_btn_margin"
                        android:layout_marginTop="20dp"
                        android:text="@string/register"
                        android:enabled="false"
                        android:onClick="@{handler::onRegisterBtnClick}"
                        android:padding="@dimen/launch_btn_margin"
                        android:id="@+id/btn_student_register"
                        android:textColor="@color/colorAccent"
                        android:foreground="?attr/selectableItemBackground"
                        android:textSize="@dimen/welcome_text_size"
                        android:layout_below="@+id/text_input_password"
                        android:layout_height="wrap_content"/>


                <Button
                        android:id="@+id/btn_link_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/launch_btn_margin"
                        android:layout_marginStart="@dimen/launch_btn_margin"
                        android:background="@null"
                        android:layout_marginTop="@dimen/launch_btn_margin"
                        android:gravity="center"
                        android:onClick="@{handler::onLinkLoginClick}"
                        android:layout_below="@+id/btn_student_register"
                        android:text="@string/btn_link_to_register"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/register_login_text"/>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
